# glitch-replace

./: .gitignore  .glitch-replace.cabal.swp  LICENSE  README  glitch-replace.cabal  greplace.hs  salad.cabal
GlitchReplace/: .Replace.hs.swp  .greplace.hs.swp  Image.hs  Replace.hs  greplace.hs
examples/: Makefile  replace.hs
src/: GlitchReplace.hs  Salad.hs
src/GlitchReplace/: Image.hs
src/Salad/: Image.hs
