name:                salad
version:             0.0.1.0
description:         A library for generating aesthetically pleasing glitch art
homepage:            https://github.com/ericvoorhis/salad
license:             MIT
license-file:        LICENSE
author:              [Eric Voorhis, Richard Protasov]
maintainer:          [eric.voorhis14@ncf.edu, richardprotasov@gmail.com]
category:            Graphics
synopsis:            A library for generating aesthetically pleasing glitch art
build-type:          Simple
cabal-version:       >=1.10

source-repository head 
  type: git
  location: https://github.com/ericvoorhis/salad

library
  exposed-modules: 
    Salad
    Salad.Image   
  hs-source-dirs:    src
  build-depends:       
    base          >= 4.8 && < 4.9,
    random,
    MissingH,
    bytestring
    -- linear        >= 1.2 && < 2.0,
    -- vector,
  
  default-language:    Haskell2010
